# taxoadapt_only_gpt

./: .gitignore  README.md  classification.py  config_manager.py  enrichment.py  expansion.py  fix_pyairports.sh  iterative_LLM_prompt.py  main.ipynb  main.py  main2.py  model_definitions.py  multi_dim.ipynb  no_cluster_ablation.py  no_dim_ablation.py  paper.py  phrase_cls.ipynb  prompts.py  pyproject.toml  requirements.txt  run_interface.py  taxonomy.py  utils.py  web_interface.py
SeeTopic/: ensemble.py  get_bert_emb.py  get_bert_nn.py  seetopic.sh
SeeTopic/seed_guided_emb/src/: cate
ablations/: no_cluster_ablation.py  no_cluster_expansion.py  no_dim_ablation.py
api/openai/: chat.py  chat_parallel.py
configs/: example_biology.yaml  example_nlp.yaml  example_steel.yaml
datasets/: sample_1k.txt
datasets/emnlp_2022/: final_taxo_datasets.json  final_taxo_datasets.txt  final_taxo_evaluation_methods.json  final_taxo_evaluation_methods.txt  final_taxo_methodologies.json  final_taxo_methodologies.txt  final_taxo_real_world_domains.json  final_taxo_real_world_domains.txt  final_taxo_tasks.json  final_taxo_tasks.txt  initial_taxo_datasets.txt  initial_taxo_evaluation_methods.txt  initial_taxo_methodologies.txt  initial_taxo_real_world_domains.txt  internal.txt
datasets/emnlp_2024/: final_taxo_datasets.json  final_taxo_datasets.txt  final_taxo_evaluation_methods.json  final_taxo_evaluation_methods.txt  final_taxo_methodologies.json  final_taxo_methodologies.txt  final_taxo_real_world_domains.json  final_taxo_real_world_domains.txt  final_taxo_tasks.json  final_taxo_tasks.txt  initial_taxo_datasets.txt  initial_taxo_evaluation_methods.txt  initial_taxo_methodologies.txt  initial_taxo_real_world_domains.txt  initial_taxo_tasks.txt  internal.txt
datasets/multi_dim/emnlp_2024/: final_taxo_datasets.json  final_taxo_datasets.txt  final_taxo_evaluation_methods.json  final_taxo_evaluation_methods.txt  final_taxo_methodologies.json  final_taxo_methodologies.txt  final_taxo_real_world_domains.json  final_taxo_real_world_domains.txt  final_taxo_tasks.json  final_taxo_tasks.txt  initial_taxo_datasets.txt  initial_taxo_evaluation_methods.txt  initial_taxo_methodologies.txt  initial_taxo_real_world_domains.txt  initial_taxo_tasks.txt
datasets/posco/: initial_taxo_energy_efficiency_improvement.txt  initial_taxo_fuel_and_carbon_source_substitution.txt  initial_taxo_fuel_and_heat_source_substitution.txt  initial_taxo_hydrogen_and_gas_injection.txt  initial_taxo_process_and_system_advancement.txt  initial_taxo_raw_material_optimization.txt  initial_taxo_reduction_efficiency_enhancement.txt  posco_papers.xlsx
eval/: AutoPhrase-emnlp22.txt  AutoPhrase-emnlp24.txt  Capturing_trend_based_on_phrase_mining.ipynb  node_level_eval.ipynb
llm_judge/example/: hierarchy.json  node_llm_judge.json  rag_base_taxonomy.json  rag_iterative_taxonomy.json  taxonomy_llm_judge.json  zeroshot_taxonomy.json
llm_judge/llm/: claude.py  deepseek.py  gemini.py  gpt.py  io.py
llm_judge/node_judge/: analysis.py  bio-corpus-coverage.py  bio-corpus-indep.py  evaluation.py  gpt.py  main-corpus-coverage.py  main-corpus-indep.py  main-level-granularity.py  main-paper-relevance.py  main-unique.py  main.py  utils.py
llm_judge/node_judge/api/openai/: chat.py  chat_parallel.py  embed.py
llm_judge/taxo_baseline/: rag_base.py  rag_iterative.py  zeroshot.py
llm_judge/taxo_judge/: judge.py
preprocessing/: auto_phrase.sh  utils.py
pyairports_fix/: pyproject.toml  setup.py
pyairports_fix/pyairports/: __init__.py  airports.py
save_result/: export_taxonomy_structure.py  export_taxonomy_structure_korean.py  export_taxonomy_translated.py  merge_taxonomy_detailed.py  merge_taxonomy_with_data.py
